@@ -128,13 +128,13 @@ extern "C" {
 /* width of board between tray and bar */
 #define PLAY_WIDTH   ((BOARD_WIDTH - 2 * BEAROFF_WIDTH - BAR_WIDTH) / 2)
 
-#define CUBE_LEFT_X    (BEAROFF_WIDTH + (PLAY_WIDTH - CUBE_WIDTH) / 2)
-#define CUBE_RIGHT_X   (BOARD_WIDTH - CUBE_LEFT_X)
+#define CUBE_RIGHT_X  (BEAROFF_WIDTH + (PLAY_WIDTH - CUBE_WIDTH) / 2)
+#define CUBE_LEFT_X   (BOARD_WIDTH - CUBE_RIGHT_X)
 #define CUBE_CENTRE_X ((BOARD_WIDTH - CUBE_WIDTH) / 2)
 #define PLAY_HEIGHT   (BOARD_HEIGHT - 2 * BORDER_HEIGHT )
 #define CUBE_CENTRE_Y (BORDER_HEIGHT + (PLAY_HEIGHT - CUBE_HEIGHT) / 2)
-#define CUBE_OWN_0_Y  (BOARD_HEIGHT - CUBE_HEIGHT - BORDER_HEIGHT)
-#define CUBE_OWN_1_Y  (BORDER_HEIGHT)
+#define CUBE_OWN_1_Y  (BOARD_HEIGHT - CUBE_HEIGHT - BORDER_HEIGHT)
+#define CUBE_OWN_0_Y  (BORDER_HEIGHT)
 #define CUBE_RESIGN_LEFT_X   (CUBE_LEFT_X - CHEQUER_WIDTH)
 #define CUBE_RESIGN_RIGHT_X  (CUBE_RIGHT_X + CHEQUER_WIDTH)
 /* where the hinges begin - y */
